# gstreamer-playground

./: Cargo.toml
gst-opencv/: Cargo.toml
gst-opencv/src/: main.rs
rgb2gray/: Cargo.toml
rgb2gray/src/: lib.rs  rgb2gray.rs
rgb2gray/src/rgb2gray/: imp.rs
videofilter/: Cargo.toml
videofilter/src/: lib.rs  videofilter.rs
videofilter/src/videofilter/: imp.rs
