[package]
name = "rgb2gray"
authors = ["Seiichi Uchida <topecongiro@fastmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "GStreamer plugin"
repository = "https://github.com/topecongiro/gstreamer-playground"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = { package = "gstreamer", version = "0.18" }
gst_base = { package = "gstreamer-base", version = "0.18" }
gst_video = { package = "gstreamer-video", version = "0.18" }
parking_lot = "0.11"

[lib]
name = "rgb2gray"
crate-type = ["cdylib"]

[build-dependencies]
gst-plugin-version-helper = "0.7.3"